play with styles to try and fix clipping

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,13 @@ body {
 }
 
 
+input,
+form {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+
 @media (max-width: 600px) {
   .Mobile {
     display: none
